# AudioFormation

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKUP_CONSOLIDATED.py.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CQL.md  E2E_TEST_RESULTS_20260217_084657.md  E2E_TEST_RESULTS_20260217_085117.md  LICENSE  README.md  SECURITY.md  conftest.py  extract_paragraphs.py  failures.txt  fix_encoding.py  fix_p11_12.py  help.txt  mypy.ini  package-lock.json  prep_arabic_mishkal.py  pyproject.toml  qc_final_report.txt  requirements.txt  run_tests.py  test_edge.py  test_generate.py  test_sec.py  v0.3-Check.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  lint.yml  security.yml
.jules/: sentinel.md
DOCS/: ARCHITECTURE.md  BEST_PRACTICES.md  BUILD_LOG.md  LOG.md  PM-WORKSHOP.md  STATE.json  api.md  arabic.md  engines.md  fast_check.py  quick_check.bat
PROJECTS/10/: pipeline-status.json  project.json
PROJECTS/10/03_GENERATED/: qc_report_ch01_intro.json  qc_report_test_short.json
PROJECTS/11/: pipeline-status.json  project.json
PROJECTS/11/03_GENERATED/: qc_report_test-engine.json
PROJECTS/12/: pipeline-status.json  project.json
PROJECTS/12/00_CONFIG/: hardware.json
PROJECTS/12/03_GENERATED/: qc_report.json  qc_report_test-engine.json
PROJECTS/12/06_MIX/: qc_final_report.json
PROJECTS/12345/: pipeline-status.json  project.json
PROJECTS/12345/03_GENERATED/: qc_report.json  qc_report_test_short.json
PROJECTS/API_ENG_11LABS_142427/: pipeline-status.json  project.json
PROJECTS/API_ENG_11LABS_142427/03_GENERATED/: qc_report_contemplative.json
PROJECTS/API_ENG_11LABS_170325/: pipeline-status.json  project.json
PROJECTS/API_ENG_11LABS_170325/03_GENERATED/: qc_report_contemplative.json
PROJECTS/API_ENG_11LABS_202428/: pipeline-status.json  project.json
PROJECTS/API_ENG_11LABS_202428/03_GENERATED/: qc_report_contemplative.json
PROJECTS/API_ENG_11LABS_202555/: pipeline-status.json  project.json
PROJECTS/API_ENG_11LABS_202808/: pipeline-status.json  project.json
PROJECTS/API_ENG_EDGE_142427/: pipeline-status.json  project.json
PROJECTS/API_ENG_EDGE_170325/: pipeline-status.json  project.json
PROJECTS/API_ENG_EDGE_202428/: pipeline-status.json  project.json
PROJECTS/API_ENG_EDGE_202555/: pipeline-status.json  project.json
PROJECTS/API_ENG_EDGE_202808/: pipeline-status.json  project.json
PROJECTS/API_ENG_GTTS_142427/: pipeline-status.json  project.json
PROJECTS/API_ENG_GTTS_170325/: pipeline-status.json  project.json
PROJECTS/API_ENG_GTTS_202428/: pipeline-status.json  project.json
PROJECTS/API_ENG_GTTS_202555/: pipeline-status.json  project.json
PROJECTS/API_ENG_GTTS_202808/: pipeline-status.json  project.json
PROJECTS/API_FLOW_142427/: pipeline-status.json  project.json
PROJECTS/API_FLOW_170325/: pipeline-status.json  project.json
PROJECTS/API_FLOW_202428/: project.json
PROJECTS/API_FLOW_202555/: pipeline-status.json  project.json
PROJECTS/API_FLOW_202808/: pipeline-status.json  project.json
PROJECTS/CH01_S01_EN/: pipeline-status.json  project.json
PROJECTS/DASHBOARD_20260217/: pipeline-status.json  project.json
PROJECTS/DELC/: pipeline-status.json  project.json
PROJECTS/DOXASCOPE-PILOT/: .gitignore  pipeline-status.json  project.json  system_notes.md
PROJECTS/DOXASCOPE_PILOT_01/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_EDGE_1771310817/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_EDGE_1771311077/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_ELEVENLABS_1771310838/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_ELEVENLABS_1771311099/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_GTTS_1771310820/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_GTTS_1771311080/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_XTTS_1771310835/: pipeline-status.json  project.json
PROJECTS/E2E_TEST_XTTS_1771311095/: pipeline-status.json  project.json
PROJECTS/EN/: pipeline-status.json  project.json
PROJECTS/MY_NOVEL/: pipeline-status.json  project.json
PROJECTS/TEST2/: pipeline-status.json  project.json
PROJECTS/V03/: pipeline-status.json  project.json
PROJECTS/V03-2/: pipeline-status.json  project.json
schemas/: project.schema.json
schemas/examples/: full_novel.json  minimal.json
scripts/: check_cuda.py  list_all_voices.py  list_all_voices_v2.py  list_ar_voices.py  test_xtts_direct.py
src/audioformation/: __init__.py  __main__.py  cli.py  config.py  generate.py  ingest.py  mix.py  pipeline.py  project.py  text.py  validation.py
test_samples/: contemplative.txt  energetic.txt
tests/: README.md  conftest.py  test_arabic.py  test_chunking.py  test_cli_cast.py  test_cli_compose.py  test_cli_mix.py  test_cli_preview.py  test_composer.py  test_dashboard_api_e2e.py  test_e2e_pipeline.py  test_engines.py  test_export.py  test_export_m4b.py  test_hardware.py  test_ingest.py  test_mix_unit.py  test_mixer.py  test_multispeaker.py  test_pipeline.py  test_processor.py  test_project.py  test_qc.py  test_qc_final.py  test_security.py  test_server.py  test_server_routes.py  test_server_static.py  test_server_static_security.py  test_server_staticfiles.py  test_sfx.py  test_static_files.py  test_staticfiles.py  test_validation.py  test_xtts.py
tools/: docstate.py  e2e_logger.py
(+212 files in other folders)
