[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioformation"
version = "0.1.0"
description = "Production audio pipeline: Voice, SFX, Music, Mix, Export."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # CLI + API
    "click>=8.1,<9",
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",

    # Audio I/O
    "pydub>=0.25,<1",
    "audioop-lts>=0.2; python_version>='3.13'",
    "numpy>=1.26,<3",
    "soundfile>=0.12,<1",

    # TTS engines
    "edge-tts>=6.1,<7",
    "httpx>=0.27,<1",

    # Audio analysis
    "pyloudnorm>=0.2,<1",

    # Music
    "midiutil>=1.2,<2",

    # Export metadata
    "mutagen>=1.47,<2",

    # Schema validation
    "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
xtts = [
    "coqui-tts>=0.27,<0.28",  # Pin: community fork, Idiap
]
vad = [
    "silero-vad>=6.0,<7",     # Pin: community-maintained
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx[test]",
]

[project.scripts]
audioformation = "audioformation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"