
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioformation"
version = "0.3.0"
description = "Production audio pipeline: Voice, SFX, Music, Mix, Export."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # CLI + API
    "click>=8.1,<9",
    # Audio I/O
    "pydub>=0.25,<1",
    "audioop-lts>=0.2; python_version>='3.13'",
    "numpy>=1.26,<3",
    "soundfile>=0.12,<1",
    # TTS engines
    "edge-tts>=7.0",   # v7 fixed DRM token 403s
    "transformers>=4.44,<5",  # Pin to prevent breakage
    # Audio analysis
    "pyloudnorm>=0.2,<1",
    # Schema validation
    "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
xtts = [
    "coqui-tts>=0.27,<0.28",  # Pin: community fork, Idiap
]
vad = [
    "silero-vad>=6.0,<7",     # Pin: community-maintained
]
cloud = [
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "gTTS>=2.5.0,<3",  # Google Text-to-Speech
    "elevenlabs>=1.0.0,<2",  # ElevenLabs API
]
server = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "aiofiles>=23.2,<24",
    "python-multipart>=0.0.9,<1",
]
m4b = [
    "mutagen>=1.47,<2",
]
midi = [
    "midiutil>=1.2,<2",
]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=4.0,<5",
    "httpx[test]",
    "pre-commit>=3.6,<5",
    "ruff>=0.1.9",
    "black>=23.12",
    "mypy>=1.0,<2",
]

[project.scripts]
audioformation = "audioformation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
fail_under = 60  # was 80, relax until Phase 4 polish

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::ResourceWarning:tashaphyne",
    "ignore::ResourceWarning:arabicstopwords",
]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
