
[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioformation"
version = "0.3.0"
description = "Production audio pipeline: Voice, SFX, Music, Mix, Export."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # CLI + API
    "click>=8.3.2,<9",
    # Audio I/O
    "pydub>=0.25,<1",
    "audioop-lts>=0.2; python_version>='3.13'",
    "numpy>=1.26,<3",
    "soundfile>=0.12,<1",
    # TTS engines
    "edge-tts>=7.0",   # v7 fixed DRM token 403s
    "transformers>=4.44,<6",  # Pin to prevent breakage
    # Audio analysis
    "pyloudnorm>=0.2,<1",
    # Schema validation
    "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
xtts = [
    "coqui-tts>=0.27.5,<0.28",  # Pin: community fork, Idiap
]
vad = [
    "silero-vad>=6.2.1,<7",     # Pin: community-maintained
]
cloud = [
    "httpx>=0.27,<1",
    "python-dotenv>=1.2.2,<2",
    "gTTS>=2.5.4,<3",  # Google Text-to-Speech
    "elevenlabs>=2.42.0,<3",  # ElevenLabs API
]
server = [
    "fastapi>=0.135.3,<1",
    "uvicorn[standard]>=0.44.0,<1",
    "aiofiles>=25.1.0,<26",
    "python-multipart>=0.0.26,<1",
]
m4b = [
    "mutagen>=1.47,<2",
]
midi = [
    "midiutil>=1.2.1,<2",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "httpx[test]",
    "pre-commit>=4.5.1,<5",
    "ruff>=0.1.9",
    "black>=26.3.1",
    "mypy>=1.20.0,<2",
]

[project.scripts]
audioformation = "audioformation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
fail_under = 60  # was 80, relax until Phase 4 polish

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::ResourceWarning:tashaphyne",
    "ignore::ResourceWarning:arabicstopwords",
]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
